added qr implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+cloudinary.cloud_name=${CLOUDINARY_NAME}
+cloudinary.api_key=${CLOUDINARY_KEY}
+cloudinary.api_secret=${CLOUDINARY_SECRET}
