--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 application.security.jwt.refresh-token.cookie-name=valevaleting
-qr.code.url=www.google.com
+qr.code.url=${QR_URL}
 application.security.jwt.secret-key=${AUTHORITIES_KEY}
 application.security.jwt.expiration=9000000
 application.security.jwt.cookie-name=jwt-cookie
